# sheetapi

./: .env.example  Cargo.toml  README.md  run.sh
api-docs/: endpoints.yaml
src/: db.rs  files.rs  main.rs  options.rs  routes.rs  type_safe_enums.rs
